<resources>
    <string name="app_name">电梯安全</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">输入不符合规范</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Log in</string>
    <string name="action_exception">Exception</string>

    <string name="action_log_in">Log in</string>
    <string name="action_log_out">Log out</string>
    <string name="prompt_login_success">Welcome</string>
    <string name="getcode">获取验证码</string>
<string name="commit_and_reset">提交并重置</string>
    <string name="your_account">你的账户</string>
    <string name="new_password">新密码</string>
    <string name="input_code">输入验证码</string>
    <string name="new_password_again">确认新密码</string>
    <string name="phone_number">手机号码</string>
<string name="password">密码</string>
    <string name="login">登录</string>
    <string name="main">首页</string>
    <string name="order">工单</string>
    <string name="equipment">设备</string>   <string name="myself">我的</string>



    <!---->
    <string name="order_message_conten">故障内容：</string>
    <string name="order_message_time">派单时间：</string>
    <string name="order_message_who">派 单 人:</string>
    <string name="order_message_address">地        址</string>


    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="startLocation">开始定位</string>
    <string name="stopLocation">停止定位</string>


    <string name="battery_saving">低功耗模式</string>
    <string name="device_sensors">仅设备模式</string>
    <string name="hight_accuracy">高精度模式</string>
    <string name="interval">定位周期(ms)</string>
    <string name="httpTimeout">网络超时(ms)</string>
    <string name="location_once">单次定位</string>
    <string name="needAddress">逆地理编码</string>
    <string name="cacheAble">开启缓存</string>
    <string name="onceLastest">提高首次定位精度</string>
    <string name="gpsFirst">GPS优先</string>
    <string name="useSensor">使用传感器</string>
    <string name="defaultInteval">20000</string>
    <string name="defaultHttpTimeout">30000</string>
    <string name="company">WWW.SPTESYUN.COM</string>
    <array name="home_video_tab">
        <item>未完成工单@dream@0</item>
        <item>历史工单@dream@1</item>
        <item>单位工单@dream@2</item>

    </array>
    <array name="newpost_video_tab">
        <item>美女@dream@0</item>
        <item>搞笑@dream@1</item>
        <item>视频@dream@2</item>
        <item>段子@dream@3</item>
        <item>城市@dream@4</item>
        <item>农村@dream@5</item>
        <item>青春@dream@6</item>
    </array>

    <array name="attention_video_tab">
        <item>订阅@dream@0</item>
        <item>关注@dream@1</item>
    </array>
    
</resources>
