<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity1">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_account"
                android:maxLines="1" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/input_code"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:id="@+id/ed_code" />

                <Button

                    android:id="@+id/btn_getcode"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:text="@string/getcode"
                    android:textStyle="bold" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"

                android:maxLines="1" />

            <EditText
                android:id="@+id/et_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password_again"
                android:inputType="textPassword"
                android:maxLines="1" />



            <Button
                android:id="@+id/btn_commit"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/commit_and_reset"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
