<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_20dp"
        android:layout_marginRight="@dimen/activity_8dp"
        android:layout_marginTop="@dimen/activity_8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="工单编号：0035565665"
                android:textColor="@color/black_text_color"
                android:textSize="18dp" />

            <Button
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_8dp"
                android:layout_toRightOf="@+id/order_number"
                android:background="@drawable/oder_btn_message"
                android:text="紧急"
                android:textSize="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_8dp"

                android:gravity="right|center_vertical"
                android:text="122222" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_message_conten"
                android:textSize="@dimen/activity_20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/order_message_time"
                android:textSize="@dimen/activity_20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_message_who"
                android:textSize="@dimen/activity_20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_message_address"
                android:textSize="@dimen/activity_20dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/grgray" />
        <LinearLayout
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_8dp">

            <Button
                android:background="@drawable/order_status_shape"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_message_address"
                android:textSize="@dimen/activity_20dp" />
            <Button
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_message_address"
                android:textSize="@dimen/activity_20dp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>