<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@mipmap/img_login_title" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_45dp"
            android:paddingRight="@dimen/activity_45dp"
            android:paddingTop="@dimen/activity_vertical_margin">
            <!--android:drawableLeft="@mipmap/ima_user"-->
            <!--<LinearLayout-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->
                <!--<ImageView-->
                    <!--android:src="@mipmap/ima_user"-->
                    <!--android:layout_width="30dp"-->
                    <!--android:layout_height="42dp" />-->
            <EditText
                android:drawableLeft="@mipmap/ima_user"
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/phone_number"
                android:maxLines="1"
                android:textColor="@color/login_text_color"
                android:textSize="13dp" />
        <!--</LinearLayout>-->

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawableLeft="@mipmap/ima_pass"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/login_text_color"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/tx_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"

                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:clickable="true"
                android:gravity="right"
                android:text="忘记密码" />

            <Button
                android:id="@+id/login_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/login_btn_shape"
                android:text="@string/login"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
